# azure_kinect_project

./: .find_open.cpp.swp  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  \  cmake_install.cmake  find_open.cpp  first  hello  images  open_device  open_stop.cpp  pointCloud  pointCloudCpp  pointCloudCppExample  test.cpp
src/: .get_images.cpp.swo  .get_images.cpp.swp  .get_pointCloud_cpp.cpp.swm  .get_pointCloud_cpp.cpp.swn  .get_pointCloud_cpp.cpp.swo  .get_pointCloud_cpp.cpp.swp  .get_pointCloud_cpp_cv.cpp.swp  .test.cpp.un~  get_images.cpp  get_pointCloud.cpp  get_pointCloud_cpp.cpp  get_pointCloud_cpp_cv.cpp  get_pointCloud_example.cpp
